--- a/movie_booking_backend/src/main/webapp/index.html
+++ b/movie_booking_backend/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Insert  here</title>
 </head>
 <body>
 <h2>hiji</h2>
